Remove useless files

--- a/_layout.jade
+++ b/_layout.jade
@@ -22,25 +22,25 @@ html
       section.top-bar-section
         ul.right
           li#optimisation
-            a(href='/doc/optimisation.html') &#x4F18;&#x5316;
+            a(href='/doc/optimisation.html') 优化
           li#syntax
-            a(href='/doc/syntax.html') &#x8BED;&#x6CD5;
+            a(href='/doc/syntax.html') 语法
           li#bindings
-            a(href='/doc/bindings.html') &#x7ED1;&#x5B9A;
+            a(href='/doc/bindings.html') 绑定
           li#functions
-            a(href='/doc/functions.html') &#x51FD;&#x6570;
+            a(href='/doc/functions.html') 函数
           li#built-ins
-            a(href='/doc/built-ins.html') &#x5185;&#x5EFA;
+            a(href='/doc/built-ins.html') 内建
           li#built-in-extensions
-            a(href='/doc/built-in-extensions.html') &#x5185;&#x5EFA;&#x6269;&#x5C55;
+            a(href='/doc/built-in-extensions.html') 内建扩展
           li#subclassing
-            a(href='/doc/subclassing.html') &#x5B50;&#x7C7B;
+            a(href='/doc/subclassing.html') 子类
           li#misc
-            a(href='/doc/misc.html') &#x6DF7;&#x6742;
+            a(href='/doc/misc.html') 混杂
           li#annex-b
-            a(href='/doc/annex-b.html') &#x9644;&#x5F55;
+            a(href='/doc/annex-b.html') 附录
           li
-            a(href='http://kangax.github.io/compat-table/es6/#ie11tp', target='_blank') &#x517C;&#x5BB9;&#x6027;
+            a(href='http://kangax.github.io/compat-table/es6/#ie11tp', target='_blank') 兼容性
     != yield
     script
       $(document).foundation();
