--- a/index.jade
+++ b/index.jade
@@ -3,23 +3,23 @@
     div(data-magellan-expedition='fixed')
       dl.sub-nav
         dd(data-magellan-arrival='c-Optimisation')
-          a(href='#c-Optimisation') &#x4F18;&#x5316;
+          a(href='#c-Optimisation') 优化
         dd(data-magellan-arrival='c-Syntax')
-          a(href='#c-Syntax') &#x8BED;&#x6CD5;
+          a(href='#c-Syntax') 语法
         dd(data-magellan-arrival='c-Bindings')
-          a(href='#c-Bindings') &#x7ED1;&#x5B9A;
+          a(href='#c-Bindings') 绑定
         dd(data-magellan-arrival='c-Functions')
-          a(href='#c-Functions') &#x51FD;&#x6570;
+          a(href='#c-Functions') 函数
         dd(data-magellan-arrival='c-Built-ins')
-          a(href='#c-Built-ins') &#x5185;&#x5EFA;
+          a(href='#c-Built-ins') 内建
         dd(data-magellan-arrival='c-Built-in-extensions')
-          a(href='#c-Built-in-extensions') &#x5185;&#x5EFA;&#x6269;&#x5C55;
+          a(href='#c-Built-in-extensions') 内建扩展
         dd(data-magellan-arrival='c-Subclassing')
-          a(href='#c-Subclassing') &#x5B50;&#x7C7B;
+          a(href='#c-Subclassing') 子类
         dd(data-magellan-arrival='c-Misc')
-          a(href='#c-Misc') &#x6DF7;&#x6742;
+          a(href='#c-Misc') 混杂
         dd(data-magellan-arrival='c-Annex-b')
-          a(href='#c-Annex-b') &#x9644;&#x5F55;
+          a(href='#c-Annex-b') 附录
 .row
   .large-12.columns
     #container.container
