Add highlight lib

--- a/doc/optimisation.jade
+++ b/doc/optimisation.jade
@@ -1,5 +1,15 @@
 .row
   .large-12.columns
-    h4 Optimisation
+    h3 优化
+.row
+  .large-12.columns
+    h4 1.适当的尾部调用
+    p proper tail calls (tail call optimisation)
+  .large-12.columns
+    h4 2.直接递归
+    p direct recursion
+  .large-12.columns
+    h4 3.互递归
+    p mutual recursion
 script
   $("#optimisation").addClass('active');
