--- a/_layout.jade
+++ b/_layout.jade
@@ -5,10 +5,12 @@ html
     title ECMAScript6 特性
     link(rel="stylesheet" href="/bower_components/foundation/css/foundation.css")
     link(rel="stylesheet" href="/bower_components/foundation/css/normalize.css")
+    link(rel="stylesheet" href="/vendor/highlight/styles/default.css")
     link(rel="stylesheet" href="/css/app.css")
     script(src="/bower_components/jquery/dist/jquery.js")
     script(src="/bower_components/foundation/js/foundation.js")
     script(src="/bower_components/underscore/underscore.js")
+    script(src="/vendor/highlight/highlight.pack.js")
     
   body
     nav.top-bar(data-topbar='', role='navigation')
@@ -41,6 +43,8 @@ html
             a(href='/doc/annex-b.html') 附录
           li
             a(href='http://kangax.github.io/compat-table/es6/#ie11tp', target='_blank') 兼容性
-    != yield
+    .wrap  
+      != yield
     script
       $(document).foundation();
+      hljs.initHighlightingOnLoad();
