Add to optimisation

--- a/_layout.jade
+++ b/_layout.jade
@@ -23,6 +23,8 @@ html
             span Menu
       section.top-bar-section
         ul.right
+          li#tool
+            a(href='/doc/start.html') 基本
           li#optimisation
             a(href='/doc/optimisation.html') 优化
           li#syntax
