--- a/_layout.jade
+++ b/_layout.jade
@@ -47,6 +47,6 @@ html
             a(href='http://kangax.github.io/compat-table/es6/#ie11tp', target='_blank') 兼容性
     .wrap  
       != yield
-    script
+    script.
       $(document).foundation();
       hljs.initHighlightingOnLoad();
