Complete syntax section

--- a/doc/syntax.jade
+++ b/doc/syntax.jade
@@ -20,5 +20,7 @@
       != partial("syntax/_09_destructuring")
     .feature
       != partial("syntax/_10_unicode_point")
+    .feature
+      != partial("syntax/_11_new_target")
 script
   $("#syntax").addClass('active');
