--- a/doc/syntax/_05_for_of.jade
+++ b/doc/syntax/_05_for_of.jade
@@ -29,7 +29,7 @@ h5.subheader for..of loops
       |console.log(str === "𠮷 𠮶 ");
       
   p 结果为 true。
-  h5 4.通用迭代
+  h5 4.通用迭代器
   h5.subheader with generic iterables
   pre
     code.javascript
