--- a/doc/syntax/_10_unicode_point.jade
+++ b/doc/syntax/_10_unicode_point.jade
@@ -1,2 +1,16 @@
 h4 十、Unicode 点
 h5.subheader Unicode code point escapes
+.feature-content
+  h5 1.字符串
+  h5.subheader in strings
+  pre
+    code.javascript
+      |console.log('\u{1d306}' == '\ud834\udf06');
+  p 结果为 true。
+  h5 2.y 标志
+  h5.subheader in identifiers
+  pre
+    code.javascript
+      |var \u{102C0} = { \u{102C0} : 2 };
+      |console.log(\u{102C0}['\ud800\udec0'] === 2);
+      
