Add bindings content

--- a/_layout.jade
+++ b/_layout.jade
@@ -24,7 +24,7 @@ html
       section.top-bar-section
         ul.right
           li#tool
-            a(href='/doc/start.html') 基本
+            a(href='/doc/start.html') 前言
           li#optimisation
             a(href='/doc/optimisation.html') 优化
           li#syntax
