--- a/doc/bindings.jade
+++ b/doc/bindings.jade
@@ -1,5 +1,11 @@
 .row
   .large-12.columns
-    h4 Bindings
+    .feature
+      != partial("bindings/_01_const")
+    .feature
+      != partial("bindings/_02_let")
+    .feature
+      != partial("bindings/_03_function_declaration")
+
 script
   $("#bindings").addClass('active');
