--- a/index.jade
+++ b/index.jade
@@ -4,7 +4,7 @@
     br
 .row
   .large-3.columns
-    table
+    table.pos-fixed.scroll-nav
       tr
         td
           a(href='#c-Optimisation') 优化
