--- a/css/main.scss
+++ b/css/main.scss
@@ -9,3 +9,18 @@
 td.active {
   background-color: #ffebbd;
 }
+
+.reference {
+  background-color: #f8f8f8;
+  padding: 3px 10px;
+  margin-top: 20px;
+  
+  ul {
+    // list-style: none;
+  }
+}
+
+p {
+  margin-bottom: 3px;
+  margin-top: 3px;
+}
