Add content to functions

--- a/doc/bindings/_02_let.jade
+++ b/doc/bindings/_02_let.jade
@@ -16,7 +16,7 @@ h5.subheader let
       |{ let bar = 456; }
       |console.log(bar === 123);
   p 结果为 true。
-  h5 3.for-loop 语句作用域
+  h5 3.for-loop 声明作用域
   h5.subheader for-loop statement scope
   pre
     code.javascript
@@ -64,7 +64,7 @@ h5.subheader let
       |{ let bar = 456; }
       |console.log(bar === 123);
   p 结果为 true。
-  h5 8.for-loop 语句作用域（严格模式）
+  h5 8.for-loop 声明作用域（严格模式）
   h5.subheader for-loop statement scope (strict mode)
   pre
     code.javascript
