--- a/doc/syntax/_09_destructuring.jade
+++ b/doc/syntax/_09_destructuring.jade
@@ -151,7 +151,7 @@ h5.subheader destructuring
       |var { [qux]: grault } = { corge: "garply" };
       |console.log(grault === "garply");
   p 结果为 true。
-  h5 17.单个 var 语句中定义多个变量
+  h5 17.单个 var 声明多个变量
   h5.subheader multiples in a single var statement
   pre
     code.javascript
