Fix syntax bug with opt and bindings page

--- a/source/doc/bindings/_03_function_declaration.slim
+++ b/source/doc/bindings/_03_function_declaration.slim
@@ -3,9 +3,9 @@ h5.subheader block-level function declaration
 .feature-content
   pre
     code.javascript
-      |function f() { return 1; }
-      |{
-      | function f() { return 2; }
-      |}
-      |console.log(f() === 1);
+      | function f() { return 1; }
+        {
+         function f() { return 2; }
+        }
+        console.log(f() === 1);
   
