--- a/source/doc/functions.slim
+++ b/source/doc/functions.slim
@@ -8,5 +8,6 @@
       != partial("functions/_03_super")
     .feature
       != partial("functions/_04_generators")
-script
+
+javascript:
   $("#functions").addClass('active');
