--- a/source/doc/syntax.slim
+++ b/source/doc/syntax.slim
@@ -22,5 +22,6 @@
       != partial("syntax/_10_unicode_point")
     .feature
       != partial("syntax/_11_new_target")
-script
+
+javascript:
   $("#syntax").addClass('active');
