--- a/source/doc/start.slim
+++ b/source/doc/start.slim
@@ -1,8 +1,8 @@
 .row
   .large-12.columns
     h3 前言
-    p ECMAScript 6（以下简称ES6）是JavaScript语言的下一代标准，正处在快速开发之中，大部分已经完成了，
-      | 预计将在2015年6月正式发布。
+    p 
+      |ECMAScript 6（以下简称ES6）是JavaScript语言的下一代标准，正处在快速开发之中，大部分已经完成了，预计将在2015年6月正式发布。
 .row
   .large-12.columns
     h4 工具
