--- a/source/doc/syntax.slim
+++ b/source/doc/syntax.slim
@@ -1,27 +1,27 @@
 .row
   .large-12.columns
     .feature
-      != partial("syntax/_01_default_para")
+      == partial "doc/syntax/_01_default_para"
     .feature
-      != partial("syntax/_02_rest_para")
+      == partial "doc/syntax/_02_rest_para"
     .feature
-      != partial("syntax/_03_spread_opera")
+      == partial "doc/syntax/_03_spread_opera"
     .feature
-      != partial("syntax/_04_literal_ext")
+      == partial "doc/syntax/_04_literal_ext"
     .feature
-      != partial("syntax/_05_for_of")
+      == partial "doc/syntax/_05_for_of"
     .feature
-      != partial("syntax/_06_octal_binary")
+      == partial "doc/syntax/_06_octal_binary"
     .feature
-      != partial("syntax/_07_template_string")
+      == partial "doc/syntax/_07_template_string"
     .feature
-      != partial("syntax/_08_regExp_y_u")
+      == partial "doc/syntax/_08_regExp_y_u"
     .feature
-      != partial("syntax/_09_destructuring")
+      == partial "doc/syntax/_09_destructuring"
     .feature
-      != partial("syntax/_10_unicode_point")
+      == partial "doc/syntax/_10_unicode_point"
     .feature
-      != partial("syntax/_11_new_target")
+      == partial "doc/syntax/_11_new_target"
 
 javascript:
   $("#syntax").addClass('active');
