--- a/source/doc/syntax/_10_unicode_point.slim
+++ b/source/doc/syntax/_10_unicode_point.slim
@@ -11,6 +11,6 @@ h5.subheader Unicode code point escapes
   h5.subheader in identifiers
   pre
     code.javascript
-      |var \u{102C0} = { \u{102C0} : 2 };
-      |console.log(\u{102C0}['\ud800\udec0'] === 2);
+      | var \u{102C0} = { \u{102C0} : 2 };
+        console.log(\u{102C0}['\ud800\udec0'] === 2);
       
