--- a/source/doc/syntax/_04_literal_ext.slim
+++ b/source/doc/syntax/_04_literal_ext.slim
@@ -5,15 +5,15 @@ h5.subheader object literal extensions
   h5.subheader computed properties
   pre
     code.javascript
-      |var x = 'y';
-      |console.log(({ [x]: 1 }).y === 1);
+      | var x = 'y';
+        console.log(({ [x]: 1 }).y === 1);
   p 结果为 true。
   h5 2.属性简写
   h5.subheader shorthand properties
   pre
     code.javascript
-      |var a = 7, b = 8, c = {a,b};
-      |console.log(c.a === 7 && c.b === 8);
+      | var a = 7, b = 8, c = {a,b};
+        console.log(c.a === 7 && c.b === 8);
   p 结果为 true。
   h5 3.方法简写
   h5.subheader shorthand methods
@@ -31,19 +31,19 @@ h5.subheader object literal extensions
   h5.subheader computed shorthand methods
   pre
     code.javascript
-      |var x = 'y';
-      |console.log(({ [x](){ return 1 } }).y() === 1);
+      | var x = 'y';
+        console.log(({ [x](){ return 1 } }).y() === 1);
   p 结果为 true。    
   h5 6.访问
   h5.subheader computed accessors
   pre
     code.javascript
-      |var x = 'y',
-      |    valueSet,
-      |    obj = {
-      |      get [x] () { return 1 },
-      |      set [x] (value) { valueSet = value }
-      |    };
-      |obj.y = 'foo';
-      |console.log(obj.y === 1 && valueSet === 'foo');
+      | var x = 'y',
+            valueSet,
+            obj = {
+              get [x] () { return 1 },
+              set [x] (value) { valueSet = value }
+            };
+        obj.y = 'foo';
+        console.log(obj.y === 1 && valueSet === 'foo');
   p 结果为 true。
