--- a/source/doc/syntax/_02_rest_para.slim
+++ b/source/doc/syntax/_02_rest_para.slim
@@ -8,6 +8,7 @@ h5.subheader rest parameters
       | let r = (function (foo, ...args) {
           return args instanceof Array && args + "" === "bar,baz";
         }("foo", "bar", "baz"));
+  p 函数返回值为 true。
   h5 2.函数的 length 属性
   h5.subheader function 'length' property
   pre
